<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">closed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculator</string>
    <string name="sub">Sub</string>
    <string name="add">Add</string>
    <string name="mlt">MLT</string>
    <string name="div">DIV</string>
    <string name="log">Log</string>
    <string name="ln">ln</string>
    <string name="enter_number">Enter Number</string>
    <string name="basic">Basic</string>
    <string name="scientific">Scientific</string>
</resources>
