<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:context=".BasicFragment">
<RelativeLayout
    android:id="@+id/relativeLayoutScientific"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/margin1"
        android:background="@color/colorAccent"
        android:layout_marginLeft="@dimen/margin1"
        android:layout_centerInParent="true">
    <TextView
        android:id="@+id/scientificResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Result"/>

        <EditText
            android:id="@+id/scientificNumberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:hint="@string/enter_number"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout">

        <Button
            android:id="@+id/logButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"/>

        <Button
            android:id="@+id/logNButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ln"/>
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
</RelativeLayout>